feat(receipts): add magic-link license library
